--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "firebase": "^10.11.1",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "saas": "^1.0.0",
+    "sass": "^1.76.0",
+    "scss": "^0.2.4",
     "typescript": "^4.9.5",
-    "gh-pages": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
